--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "license": "MIT",
+  "keywords": ["Escuela digital","Escuela Virtual"],
   "dependencies": {
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +40,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "typescript": "^3.9.7"
   }
 }
