--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.1",
   "private": false,
   "license": "MIT",
-  "keywords": ["Escuela digital","Escuela Virtual"],
+  "keywords": [
+    "Escuela digital",
+    "Escuela Virtual"
+  ],
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
