--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "frontend",
+  "appName": "Escuela Digital",
   "version": "0.1.1",
   "private": false,
   "license": "MIT",
-  "keywords": ["Escuela digital","Escuela Virtual"],
+  "keywords": [
+    "Escuela digital",
+    "Escuela Virtual"
+  ],
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
