--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "express": "^4.17.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
