--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-router-dom": "^5.1.5",
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
+    "serve": "^11.3.2",
     "typescript": "^3.9.7"
   }
 }
