--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-elastic-carousel": "^0.7.4",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build && node server/server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,28 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@storybook/addon-actions": "^6.0.16",
-    "@storybook/addon-essentials": "^6.0.16",
-    "@storybook/addon-links": "^6.0.16",
-    "@storybook/node-logger": "^6.0.16",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.16",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
-    "@testing-library/user-event": "^12.1.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/jest": "^26.0.8",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.5",
-    "babel-loader": "^8.1.0",
-    "dotenv": "^8.2.0",
-    "node-sass": "^4.14.1",
-    "react-is": "^16.13.1",
-    "serve": "^11.3.2",
-    "typescript": "^3.9.7"
+    "@testing-library/user-event": "^12.1.0"
   }
 }
